[package]
name = "yume"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
sha256 = "1.0.2"
serde_json = "1.0.64"
base64 = "0.13.0"
chrono = "0.4.19"
serde = { version = "1.0.126", features=["derive"]}